--- a/locales/ar/metadata.json
+++ b/locales/ar/metadata.json
@@ -1,6 +1,7 @@
 {
   "chat": {
-    "description": "تقدم LobeChat أفضل تجربة استخدام لـ ChatGPT و OLLaMA و Gemini و Claude WebUI"
+    "description": "تقدم LobeChat أفضل تجربة استخدام لـ ChatGPT و OLLaMA و Gemini و Claude WebUI",
+    "title": "LobeChat: أداة أداء شخصية LLM، لتمنح نفسك عقلًا أكثر ذكاءً"
   },
   "market": {
     "description": "إنشاء محتوى، كتابة نصوص، إجابة على الأسئلة، إنشاء صور، إنشاء فيديو، إنشاء صوت، وكيل ذكاء اصطناعي، سير عمل تلقائي، قم بتخصيص مساعد ذكاء اصطناعي / GPTs / OLLaMA الخاص بك",
@@ -11,6 +12,7 @@
     "title": "سوق الإضافات"
   },
   "welcome": {
-    "description": "تقدم LobeChat أفضل تجربة استخدام لـ ChatGPT و OLLaMA و Gemini و Claude WebUI"
+    "description": "تقدم LobeChat أفضل تجربة استخدام لـ ChatGPT و OLLaMA و Gemini و Claude WebUI",
+    "title": "مرحبًا بك في استخدام LobeChat: أداة أداء شخصية LLM، لتمنح نفسك عقلًا أكثر ذكاءً"
   }
 }
