--- a/locales/de-DE/metadata.json
+++ b/locales/de-DE/metadata.json
@@ -1,6 +1,7 @@
 {
   "chat": {
-    "description": "LobeChat bietet Ihnen das beste ChatGPT-, OLLaMA-, Gemini- und Claude-WebUI-Nutzererlebnis."
+    "description": "LobeChat bietet Ihnen das beste ChatGPT-, OLLaMA-, Gemini- und Claude-WebUI-Nutzererlebnis.",
+    "title": "LobeChat: Persönliches LLM-Produktivitätstool, um deinem Gehirn mehr Intelligenz zu verleihen"
   },
   "market": {
     "description": "Inhalts-Erstellung, Copywriting, Fragen & Antworten, Bildgenerierung, Videogenerierung, Sprachgenerierung, intelligente Agenten, Automatisierungs-Workflows - gestalten Sie Ihren eigenen AI / GPTs / OLLaMA intelligenten Assistenten",
@@ -11,6 +12,7 @@
     "title": "Plugin-Markt"
   },
   "welcome": {
-    "description": "LobeChat bietet Ihnen das beste ChatGPT-, OLLaMA-, Gemini- und Claude-WebUI-Nutzererlebnis."
+    "description": "LobeChat bietet Ihnen das beste ChatGPT-, OLLaMA-, Gemini- und Claude-WebUI-Nutzererlebnis.",
+    "title": "Willkommen bei LobeChat: Persönliches LLM-Produktivitätstool, um deinem Gehirn mehr Intelligenz zu verleihen"
   }
 }
