--- a/locales/pl-PL/metadata.json
+++ b/locales/pl-PL/metadata.json
@@ -1,6 +1,7 @@
 {
   "chat": {
-    "description": "LobeChat zapewnia najlepsze doświadczenie użytkowania ChatGPT, OLLaMA, Gemini, Claude WebUI"
+    "description": "LobeChat zapewnia najlepsze doświadczenie użytkowania ChatGPT, OLLaMA, Gemini, Claude WebUI",
+    "title": "LobeChat: narzędzie do poprawy efektywności osobistej LLM, dając sobie bardziej inteligentny umysł"
   },
   "market": {
     "description": "Tworzenie treści, copywriting, pytania i odpowiedzi, generowanie obrazów, generowanie wideo, generowanie głosu, inteligentny agent, automatyzacja workflowów - dostosuj swojego własnego asystenta AI / GPTs / OLLaMA",
@@ -11,6 +12,7 @@
     "title": "Rynek wtyczek"
   },
   "welcome": {
-    "description": "LobeChat zapewnia najlepsze doświadczenie użytkowania ChatGPT, OLLaMA, Gemini, Claude WebUI"
+    "description": "LobeChat zapewnia najlepsze doświadczenie użytkowania ChatGPT, OLLaMA, Gemini, Claude WebUI",
+    "title": "Witaj w LobeChat: narzędziu do poprawy efektywności osobistej LLM, dając sobie bardziej inteligentny umysł"
   }
 }
