--- a/locales/pt-BR/plugin.json
+++ b/locales/pt-BR/plugin.json
@@ -4,7 +4,9 @@
     "function_call": "Chamada de Função",
     "off": "Desativar Depuração",
     "on": "Ver Informações de Chamada de Plugin",
-    "response": "Resposta"
+    "payload": "carga do plugin",
+    "response": "Resposta",
+    "tool_call": "solicitação de chamada de ferramenta"
   },
   "detailModal": {
     "info": {
@@ -158,5 +160,6 @@
       "installed": "Instalados"
     },
     "title": "Loja de Plugins"
-  }
+  },
+  "unknownPlugin": "Plugin desconhecido"
 }
