--- a/locales/ar/plugin.json
+++ b/locales/ar/plugin.json
@@ -4,7 +4,9 @@
     "function_call": "استدعاء الدالة",
     "off": "إيقاف التصحيح",
     "on": "عرض معلومات استدعاء البرنامج المساعد",
-    "response": "الرد"
+    "payload": "حمولة البرنامج المساعد",
+    "response": "الرد",
+    "tool_call": "طلب استدعاء الأداة"
   },
   "detailModal": {
     "info": {
@@ -158,5 +160,6 @@
       "installed": "مثبتة"
     },
     "title": "متجر الإضافات"
-  }
+  },
+  "unknownPlugin": "البرنامج المساعد غير معروف"
 }
