--- a/locales/bg-BG/plugin.json
+++ b/locales/bg-BG/plugin.json
@@ -4,7 +4,9 @@
     "function_call": "Извикване на функция",
     "off": "Изключи отстраняване на грешки",
     "on": "Преглед на информацията за извикване на плъгина",
-    "response": "Отговор"
+    "payload": "полезна натоварване",
+    "response": "Отговор",
+    "tool_call": "заявка за инструмент"
   },
   "detailModal": {
     "info": {
@@ -158,5 +160,6 @@
       "installed": "Инсталирани"
     },
     "title": "Магазин за плъгини"
-  }
+  },
+  "unknownPlugin": "Неизвестен плъгин"
 }
