--- a/locales/en-US/metadata.json
+++ b/locales/en-US/metadata.json
@@ -1,6 +1,7 @@
 {
   "chat": {
-    "description": "LobeChat offers you the best ChatGPT, OLLaMA, Gemini, Claude WebUI user experience"
+    "description": "LobeChat offers you the best ChatGPT, OLLaMA, Gemini, Claude WebUI user experience",
+    "title": "LobeChat: Personal LLM Productivity Tool, Give Yourself a Smarter Brain"
   },
   "market": {
     "description": "Content creation, copywriting, Q&A, image generation, video generation, voice generation, smart agents, automation workflows, customize your own AI / GPTs / OLLaMA intelligent agent",
@@ -11,6 +12,7 @@
     "title": "Plugin Market"
   },
   "welcome": {
-    "description": "LobeChat offers you the best ChatGPT, OLLaMA, Gemini, Claude WebUI user experience"
+    "description": "LobeChat offers you the best ChatGPT, OLLaMA, Gemini, Claude WebUI user experience",
+    "title": "Welcome to LobeChat: Personal LLM Productivity Tool, Give Yourself a Smarter Brain"
   }
 }
