--- a/locales/es-ES/plugin.json
+++ b/locales/es-ES/plugin.json
@@ -4,7 +4,9 @@
     "function_call": "Llamada a función",
     "off": "Desactivado",
     "on": "Ver información de llamada de complemento",
-    "response": "Respuesta"
+    "payload": "carga del complemento",
+    "response": "Respuesta",
+    "tool_call": "solicitud de llamada de herramienta"
   },
   "detailModal": {
     "info": {
@@ -158,5 +160,6 @@
       "installed": "Instalados"
     },
     "title": "Tienda de complementos"
-  }
+  },
+  "unknownPlugin": "Plugin desconocido"
 }
