--- a/locales/fr-FR/plugin.json
+++ b/locales/fr-FR/plugin.json
@@ -4,7 +4,9 @@
     "function_call": "Appel de fonction",
     "off": "Désactivé",
     "on": "Activer le débogage",
-    "response": "Réponse"
+    "payload": "charge du plugin",
+    "response": "Réponse",
+    "tool_call": "demande d'appel d'outil"
   },
   "detailModal": {
     "info": {
@@ -158,5 +160,6 @@
       "installed": "Installés"
     },
     "title": "Boutique de plugins"
-  }
+  },
+  "unknownPlugin": "Plugin inconnu"
 }
