--- a/locales/it-IT/metadata.json
+++ b/locales/it-IT/metadata.json
@@ -1,6 +1,7 @@
 {
   "chat": {
-    "description": "LobeChat offre la migliore esperienza di utilizzo di ChatGPT, OLLaMA, Gemini, Claude WebUI"
+    "description": "LobeChat offre la migliore esperienza di utilizzo di ChatGPT, OLLaMA, Gemini, Claude WebUI",
+    "title": "LobeChat: strumento personale per la produttività LLM, per un cervello più intelligente"
   },
   "market": {
     "description": "Creazione di contenuti, copywriting, domande e risposte, generazione di immagini, generazione di video, generazione vocale, agente intelligente, flusso di lavoro automatizzato, personalizza il tuo assistente intelligente AI / GPTs / OLLaMA",
@@ -11,6 +12,7 @@
     "title": "Mercato dei plugin"
   },
   "welcome": {
-    "description": "LobeChat offre la migliore esperienza di utilizzo di ChatGPT, OLLaMA, Gemini, Claude WebUI"
+    "description": "LobeChat offre la migliore esperienza di utilizzo di ChatGPT, OLLaMA, Gemini, Claude WebUI",
+    "title": "Benvenuto su LobeChat: strumento personale per la produttività LLM, per un cervello più intelligente"
   }
 }
