--- a/locales/ko-KR/metadata.json
+++ b/locales/ko-KR/metadata.json
@@ -1,6 +1,7 @@
 {
   "chat": {
-    "description": "LobeChat은 최고의 ChatGPT, OLLaMA, Gemini, Claude WebUI 사용 경험을 제공합니다."
+    "description": "LobeChat은 최고의 ChatGPT, OLLaMA, Gemini, Claude WebUI 사용 경험을 제공합니다.",
+    "title": "LobeChat: 개인 LLM 생산성 도구, 더 똑똑한 두뇌를 위해"
   },
   "market": {
     "description": "콘텐츠 작성, 문구, 질의응답, 이미지 생성, 비디오 생성, 음성 생성, 지능형 에이전트, 자동화된 워크플로우를 통해 AI / GPTs / OLLaMA를 맞춤 설정하세요.",
@@ -11,6 +12,7 @@
     "title": "플러그인 마켓"
   },
   "welcome": {
-    "description": "LobeChat은 최고의 ChatGPT, OLLaMA, Gemini, Claude WebUI 사용 경험을 제공합니다."
+    "description": "LobeChat은 최고의 ChatGPT, OLLaMA, Gemini, Claude WebUI 사용 경험을 제공합니다.",
+    "title": "LobeChat를 사용해 주셔서 감사합니다: 개인 LLM 생산성 도구, 더 똑똑한 두뇌를 위해"
   }
 }
