--- a/locales/nl-NL/metadata.json
+++ b/locales/nl-NL/metadata.json
@@ -1,6 +1,7 @@
 {
   "chat": {
-    "description": "LobeChat biedt je de beste ChatGPT, OLLaMA, Gemini, Claude WebUI gebruikerservaring"
+    "description": "LobeChat biedt je de beste ChatGPT, OLLaMA, Gemini, Claude WebUI gebruikerservaring",
+    "title": "LobeChat: Persoonlijke LLM-productiviteitstool, geef jezelf een slimmer brein"
   },
   "market": {
     "description": "Content creatie, copywriting, Q&A, beeldgeneratie, videogeneratie, spraakgeneratie, intelligente agent, geautomatiseerde workflows, pas je eigen AI / GPTs / OLLaMA slimme assistent aan",
@@ -11,6 +12,7 @@
     "title": "Plug-insmarkt"
   },
   "welcome": {
-    "description": "LobeChat biedt je de beste ChatGPT, OLLaMA, Gemini, Claude WebUI gebruikerservaring"
+    "description": "LobeChat biedt je de beste ChatGPT, OLLaMA, Gemini, Claude WebUI gebruikerservaring",
+    "title": "Welkom bij LobeChat: Persoonlijke LLM-productiviteitstool, geef jezelf een slimmer brein"
   }
 }
