--- a/locales/nl-NL/plugin.json
+++ b/locales/nl-NL/plugin.json
@@ -4,7 +4,9 @@
     "function_call": "函数调用",
     "off": "关闭调试",
     "on": "查看插件调用信息",
-    "response": "返回结果"
+    "payload": "payload",
+    "response": "返回结果",
+    "tool_call": "tool_call"
   },
   "detailModal": {
     "info": {
@@ -158,5 +160,6 @@
       "installed": "Geïnstalleerd"
     },
     "title": "Pluginwinkel"
-  }
+  },
+  "unknownPlugin": "onbekende plugin"
 }
