--- a/locales/pt-BR/metadata.json
+++ b/locales/pt-BR/metadata.json
@@ -1,6 +1,7 @@
 {
   "chat": {
-    "description": "LobeChat oferece a melhor experiência de uso do ChatGPT, OLLaMA, Gemini, Claude WebUI"
+    "description": "LobeChat oferece a melhor experiência de uso do ChatGPT, OLLaMA, Gemini, Claude WebUI",
+    "title": "LobeChat: Ferramenta de produtividade pessoal LLM para um cérebro mais inteligente"
   },
   "market": {
     "description": "Criação de conteúdo, redação, perguntas e respostas, geração de imagens, geração de vídeos, geração de voz, agente inteligente, fluxo de trabalho automatizado, personalize seu assistente de IA / GPTs / OLLaMA exclusivo",
@@ -11,6 +12,7 @@
     "title": "Mercado de plug-ins"
   },
   "welcome": {
-    "description": "LobeChat oferece a melhor experiência de uso do ChatGPT, OLLaMA, Gemini, Claude WebUI"
+    "description": "LobeChat oferece a melhor experiência de uso do ChatGPT, OLLaMA, Gemini, Claude WebUI",
+    "title": "Bem-vindo ao LobeChat: Ferramenta de produtividade pessoal LLM para um cérebro mais inteligente"
   }
 }
