--- a/locales/ru-RU/metadata.json
+++ b/locales/ru-RU/metadata.json
@@ -1,6 +1,7 @@
 {
   "chat": {
-    "description": "LobeChat предлагает вам лучший опыт использования ChatGPT, OLLaMA, Gemini, Claude WebUI"
+    "description": "LobeChat предлагает вам лучший опыт использования ChatGPT, OLLaMA, Gemini, Claude WebUI",
+    "title": "LobeChat: персональный инструмент для повышения эффективности LLM, чтобы сделать ваш мозг умнее"
   },
   "market": {
     "description": "Создание контента, копирайтинг, вопросы и ответы, генерация изображений, видео, голоса, интеллектуальный агент, автоматизация рабочих процессов, настройте своего собственного помощника AI / GPTs / OLLaMA",
@@ -11,6 +12,7 @@
     "title": "Рынок плагинов"
   },
   "welcome": {
-    "description": "LobeChat предлагает вам лучший опыт использования ChatGPT, OLLaMA, Gemini, Claude WebUI"
+    "description": "LobeChat предлагает вам лучший опыт использования ChatGPT, OLLaMA, Gemini, Claude WebUI",
+    "title": "Добро пожаловать в LobeChat: персональный инструмент для повышения эффективности LLM, чтобы сделать ваш мозг умнее"
   }
 }
