--- a/locales/vi-VN/plugin.json
+++ b/locales/vi-VN/plugin.json
@@ -4,7 +4,9 @@
     "function_call": "Gọi hàm",
     "off": "Tắt gỡ lỗi",
     "on": "Xem thông tin gọi plugin",
-    "response": "Kết quả trả về"
+    "payload": "Dữ liệu cắm",
+    "response": "Kết quả trả về",
+    "tool_call": "Yêu cầu công cụ"
   },
   "detailModal": {
     "info": {
@@ -158,5 +160,6 @@
       "installed": "Đã cài đặt"
     },
     "title": "Cửa hàng plugin"
-  }
+  },
+  "unknownPlugin": "Plugin không xác định"
 }
