✨ feat: Support DeepSeek as new model provider

--- a/docs/self-hosting/environment-variables/model-provider.mdx
+++ b/docs/self-hosting/environment-variables/model-provider.mdx
@@ -255,7 +255,7 @@ If you need to use Azure OpenAI to provide model services, you can refer to the 
 - Type: Required
 - Description: This is the API key you applied for in the ZHIPU AI service
 - Default: -
-- Example: `xxxxxx...xxxxxx`
+- Example: `4582d332441a313f5c2ed9824d1798ca.rC8EcTAhgbOuAuVT`
 
 ## 01.AI
 
