🔧 chore: Update pwa i18n

--- a/locales/ar/common.json
+++ b/locales/ar/common.json
@@ -58,7 +58,7 @@
     },
     "title": "استيراد البيانات"
   },
-  "installPWA": "تثبيت تطبيق الويب",
+  "installPWA": "تثبيت تطبيق المتصفح",
   "lang": {
     "ar": "العربية",
     "bg-BG": "البلغارية",
