--- a/locales/pt-BR/common.json
+++ b/locales/pt-BR/common.json
@@ -58,7 +58,7 @@
     },
     "title": "Importar dados"
   },
-  "installPWA": "Instalar PWA",
+  "installPWA": "Instalar aplicativo de navegador",
   "lang": {
     "ar": "árabe",
     "bg-BG": "Búlgaro",
