--- a/locales/tr-TR/common.json
+++ b/locales/tr-TR/common.json
@@ -58,7 +58,7 @@
     },
     "title": "Veri İçe Aktar"
   },
-  "installPWA": "Uygulamayı Yükle",
+  "installPWA": "Tarayıcı Uygulamasını Yükle",
   "lang": {
     "ar": "Arapça",
     "bg-BG": "Bulgarca",
