--- a/locales/zh-TW/common.json
+++ b/locales/zh-TW/common.json
@@ -58,7 +58,7 @@
     },
     "title": "匯入資料"
   },
-  "installPWA": "安裝PWA",
+  "installPWA": "安裝瀏覽器應用 (PWA)",
   "lang": {
     "ar": "阿拉伯語",
     "bg-BG": "保加利亞語",
