--- a/locales/de-DE/common.json
+++ b/locales/de-DE/common.json
@@ -58,7 +58,7 @@
     },
     "title": "Daten importieren"
   },
-  "installPWA": "Installieren Sie die App",
+  "installPWA": "Installiere die Browser-App",
   "lang": {
     "ar": "Arabisch",
     "bg-BG": "Bulgarisch",
