--- a/locales/es-ES/common.json
+++ b/locales/es-ES/common.json
@@ -58,7 +58,7 @@
     },
     "title": "Importar datos"
   },
-  "installPWA": "Instalar la aplicación",
+  "installPWA": "Instalar la aplicación del navegador",
   "lang": {
     "ar": "árabe",
     "bg-BG": "búlgaro",
