--- a/locales/fr-FR/common.json
+++ b/locales/fr-FR/common.json
@@ -58,7 +58,7 @@
     },
     "title": "Importer des données"
   },
-  "installPWA": "Installer l'application",
+  "installPWA": "Installer l'application du navigateur",
   "lang": {
     "ar": "arabe",
     "bg-BG": "Bulgare",
