--- a/locales/ko-KR/common.json
+++ b/locales/ko-KR/common.json
@@ -58,7 +58,7 @@
     },
     "title": "데이터 가져오기"
   },
-  "installPWA": "앱 설치",
+  "installPWA": "브라우저 앱 설치",
   "lang": {
     "ar": "아랍어",
     "bg-BG": "불가리아어",
