--- a/locales/ru-RU/common.json
+++ b/locales/ru-RU/common.json
@@ -58,7 +58,7 @@
     },
     "title": "Импорт данных"
   },
-  "installPWA": "Установить PWA",
+  "installPWA": "Установить веб-приложение",
   "lang": {
     "ar": "арабский",
     "bg-BG": "болгарский",
