--- a/locales/vi-VN/common.json
+++ b/locales/vi-VN/common.json
@@ -58,7 +58,7 @@
     },
     "title": "Nhập dữ liệu"
   },
-  "installPWA": "Cài đặt ứng dụng",
+  "installPWA": "Cài đặt ứng dụng trình duyệt",
   "lang": {
     "ar": "Tiếng Ả Rập",
     "bg-BG": "Tiếng Bun-ga-ri",
