--- a/locales/zh-CN/common.json
+++ b/locales/zh-CN/common.json
@@ -58,7 +58,7 @@
     },
     "title": "导入数据"
   },
-  "installPWA": "安装客户端",
+  "installPWA": "安装浏览器应用 (PWA)",
   "lang": {
     "ar": "阿拉伯语",
     "bg-BG": "保加利亚语",
