--- a/docs/self-hosting/advanced/feature-flags.mdx
+++ b/docs/self-hosting/advanced/feature-flags.mdx
@@ -19,7 +19,7 @@ In addition to basic environment variable configuration, LobeChat also offers fe
 
 - Type: Optional
 - Description: Used to control LobeChat's feature functionalities. Supports multiple feature flags, using `+` to add a feature and `-` to disable a feature. Separate multiple feature flags with a comma `,` and enclose the entire value in quotes `"` to avoid parsing errors.
-- Default Value: `-`
+- Default: `-`
 - Example: `"-welcome_suggest"`
 
 All features are controlled by the `FEATURE_FLAGS` variable as the sole configuration variable.
