📝 docs: relative path

--- a/docs/self-hosting/environment-variables/basic.mdx
+++ b/docs/self-hosting/environment-variables/basic.mdx
@@ -78,7 +78,7 @@ Further reading:
 - Default: `-`
 - Example: `"-welcome_suggest"`
 
-For specific content, please refer to the [Feature Flags](https://lobehub.com/zh/docs/self-hosting/advanced/feature-flags) documentation.
+For specific content, please refer to the [Feature Flags](/docs/self-hosting/advanced/feature-flags) documentation.
 
 ## Plugin Service
 
