--- a/locales/tr-TR/welcome.json
+++ b/locales/tr-TR/welcome.json
@@ -9,7 +9,7 @@
       "replaceBtn": "Başka bir grup",
       "title": "Yeni Asistan Önerileri:"
     },
-    "defaultMessage": "Ben sizin kişisel akıllı asistanınız LobeChat'ım, şu anda size nasıl yardımcı olabilirim?\nDaha profesyonel veya özelleştirilmiş bir asistana ihtiyacınız varsa, özel bir asistan oluşturmak için `+` simgesine tıklayabilirsiniz",
+    "defaultMessage": "Ben sizin kişisel akıllı asistanınız HelloGPT'ım, şu anda size nasıl yardımcı olabilirim?\nDaha profesyonel veya özelleştirilmiş bir asistana ihtiyacınız varsa, özel bir asistan oluşturmak için `+` simgesine tıklayabilirsiniz",
     "qa": {
       "q01": "LobeHub nedir?",
       "q02": "LobeChat nedir?",
