--- a/locales/ru-RU/welcome.json
+++ b/locales/ru-RU/welcome.json
@@ -9,7 +9,7 @@
       "replaceBtn": "Заменить",
       "title": "Рекомендации новых агентов:"
     },
-    "defaultMessage": "Я ваш персональный интеллектуальный помощник LobeChat. Чем я могу помочь вам сейчас?\nЕсли вам нужна более профессиональная или настраиваемая помощь, нажмите `+`, чтобы создать пользовательского помощника.",
+    "defaultMessage": "Я ваш персональный интеллектуальный помощник HelloGPT. Чем я могу помочь вам сейчас?\nЕсли вам нужна более профессиональная или настраиваемая помощь, нажмите `+`, чтобы создать пользовательского помощника.",
     "qa": {
       "q01": "Что такое LobeHub?",
       "q02": "Что такое LobeChat?",
