--- a/locales/pt-BR/welcome.json
+++ b/locales/pt-BR/welcome.json
@@ -9,7 +9,7 @@
       "replaceBtn": "Trocar",
       "title": "Recomendação de assistentes adicionais:"
     },
-    "defaultMessage": "Eu sou o seu assistente de IA pessoal, LobeChat. Como posso ajudar você agora?\nSe precisar de assistência mais profissional ou personalizada, clique em `+` para criar um assistente personalizado",
+    "defaultMessage": "Eu sou o seu assistente de IA pessoal, HelloGPT. Como posso ajudar você agora?\nSe precisar de assistência mais profissional ou personalizada, clique em `+` para criar um assistente personalizado",
     "qa": {
       "q01": "O que é o LobeHub?",
       "q02": "O que é o LobeChat?",
