--- a/locales/nl-NL/welcome.json
+++ b/locales/nl-NL/welcome.json
@@ -9,7 +9,7 @@
       "replaceBtn": "Vervang een groep",
       "title": "Nieuwe aanbeveling assistent: "
     },
-    "defaultMessage": "Ik ben uw persoonlijke slimme assistent LobeChat, waarmee kan ik u helpen?\nAls u een meer professionele of op maat gemaakte assistent nodig heeft, kunt u op `+` klikken om een aangepaste assistent te maken",
+    "defaultMessage": "Ik ben uw persoonlijke slimme assistent HelloGPT, waarmee kan ik u helpen?\nAls u een meer professionele of op maat gemaakte assistent nodig heeft, kunt u op `+` klikken om een aangepaste assistent te maken",
     "qa": {
       "q01": "Wat is LobeHub?",
       "q02": "Wat is LobeChat?",
