--- a/locales/fr-FR/welcome.json
+++ b/locales/fr-FR/welcome.json
@@ -9,7 +9,7 @@
       "replaceBtn": "Remplacer",
       "title": "Nouvelles recommandations d'assistants :"
     },
-    "defaultMessage": "Je suis votre assistant intelligent personnel LobeChat. Que puis-je faire pour vous maintenant ?\nSi vous avez besoin d'une assistance plus professionnelle ou personnalisée, vous pouvez cliquer sur `+` pour créer un assistant personnalisé.",
+    "defaultMessage": "Je suis votre assistant intelligent personnel HelloGPT. Que puis-je faire pour vous maintenant ?\nSi vous avez besoin d'une assistance plus professionnelle ou personnalisée, vous pouvez cliquer sur `+` pour créer un assistant personnalisé.",
     "qa": {
       "q01": "Qu'est-ce que LobeHub ?",
       "q02": "Qu'est-ce que LobeChat ?",
