--- a/locales/bg-BG/welcome.json
+++ b/locales/bg-BG/welcome.json
@@ -9,7 +9,7 @@
       "replaceBtn": "Смени",
       "title": "Препоръчване на нови асистенти:"
     },
-    "defaultMessage": "Аз съм вашият личен интелигентен асистент LobeChat. Как мога да ви помогна сега?\nАко искате по-професионален или персонализиран асистент, може да кликнете върху `+`, за да създадете персонализиран асистент.",
+    "defaultMessage": "Аз съм вашият личен интелигентен асистент HelloGPT. Как мога да ви помогна сега?\nАко искате по-професионален или персонализиран асистент, може да кликнете върху `+`, за да създадете персонализиран асистент.",
     "qa": {
       "q01": "Какво е LobeHub?",
       "q02": "Какво е LobeChat?",
