Changes to be committed: 	modified:   locales/fr-FR/welcome.json ligne 44      "desc1": Votre **assistant IA personnel, polyvalent et extrêmement compétent**. Que puis-je faire pour vous *maintenant*?.",    ligne 4     "market": "Parcourir les Assistants",    ligne 5     "start": "Conversez maintenant" modified:   locales/fr-FR/metadata.json

--- a/locales/fr-FR/metadata.json
+++ b/locales/fr-FR/metadata.json
@@ -5,11 +5,11 @@
   },
   "market": {
     "description": "Création de contenu, rédaction, questions-réponses, génération d'images, génération de vidéos, génération vocale, agent intelligent, flux de travail automatisé, personnalisez votre agent intelligent AI / GPTs / OLLaMA",
-    "title": "Marché des agents"
+    "title": "Section des Assistants"
   },
   "plugins": {
     "description": "Recherche, génération de graphiques, académique, génération d'images, génération de vidéos, génération vocale, flux de travail automatisé, personnalisez les capacités des plugins ToolCall exclusifs de ChatGPT / OLLaMA",
-    "title": "Marché des plugins"
+    "title": "Section des plugins"
   },
   "welcome": {
     "description": "LobeChat offre la meilleure expérience d'utilisation de ChatGPT, OLLaMA, Gemini, Claude WebUI",
