--- a/locales/fr-FR/chat.json
+++ b/locales/fr-FR/chat.json
@@ -23,7 +23,7 @@
   "historyRange": "Plage d'historique",
   "inbox": {
     "desc": "Débloquez le potentiel de votre esprit. Votre agent intelligent est là pour discuter avec vous de tout et de rien.",
-    "title": "Discutons un peu"
+    "title": "Dialoguez avec moi"
   },
   "input": {
     "addAi": "Ajouter un message AI",
