--- a/locales/fr-FR/plugin.json
+++ b/locales/fr-FR/plugin.json
@@ -70,7 +70,7 @@
         "pattenErrorMessage": "Seuls les caractères alphanumériques, - et _ sont autorisés"
       },
       "manifest": {
-        "desc": "Lien d'installation du plugin pour LobeChat",
+        "desc": "Lien d'installation du plugin pour Deblo",
         "label": "URL du fichier de description du plugin (Manifest)",
         "preview": "Aperçu du Manifest",
         "refresh": "Actualiser"
@@ -103,7 +103,7 @@
       "edit": "Modifier un plugin personnalisé"
     },
     "type": {
-      "lobe": "Plugin LobeChat",
+      "lobe": "Plugin Deblo",
       "openai": "Plugin OpenAI"
     },
     "update": "Mettre à jour",
