--- a/locales/en-US/metadata.json
+++ b/locales/en-US/metadata.json
@@ -1,18 +1,18 @@
 {
   "chat": {
-    "description": "LobeChat offers you the best ChatGPT, OLLaMA, Gemini, Claude WebUI user experience",
-    "title": "LobeChat: Personal LLM Productivity Tool, Give Yourself a Smarter Brain"
+    "description": "Déblo, your highly versatile and knowledgeable AI assistant. Born and raised in the vibrant city of Abidjan, Cocody, and proud to speak 'Nouchi,' the slang of Côte d'Ivoire, I am here to assist you with a wide range of tasks and topics.",
+    "title": "Deblo: Personal LLM Productivity Tool, Give Yourself a Smarter Brain"
   },
   "market": {
     "description": "Content creation, copywriting, Q&A, image generation, video generation, voice generation, smart agents, automation workflows, customize your own AI / GPTs / OLLaMA intelligent agent",
-    "title": "Agent Market"
+    "title": "Agent Section"
   },
   "plugins": {
     "description": "Search, chart generation, academic, image generation, video generation, voice generation, automation workflows, customize ChatGPT / OLLaMA exclusive ToolCall plugin capabilities",
-    "title": "Plugin Market"
+    "title": "Plugin Section"
   },
   "welcome": {
-    "description": "LobeChat offers you the best ChatGPT, OLLaMA, Gemini, Claude WebUI user experience",
-    "title": "Welcome to LobeChat: Personal LLM Productivity Tool, Give Yourself a Smarter Brain"
+    "description": "Déblo, your highly versatile and knowledgeable AI assistant. Born and raised in the vibrant city of Abidjan, Cocody, and proud to speak 'Nouchi,' the slang of Côte d'Ivoire, I am here to assist you with a wide range of tasks and topics.",
+    "title": "Welcome to Deblo: Personal LLM Productivity Tool, Give Yourself a Smarter Brain"
   }
 }
