--- a/locales/en-US/welcome.json
+++ b/locales/en-US/welcome.json
@@ -9,22 +9,22 @@
       "replaceBtn": "Replace Batch",
       "title": "New Assistant Recommendations:"
     },
-    "defaultMessage": "I am your personal intelligent assistant LobeChat, how can I help you now?\nIf you need a more professional or customized assistant, you can click on `+` to create a custom assistant",
+    "defaultMessage": "I am your personal intelligent assistant Deblo, how can I help you now?\nIf you need a more professional or customized assistant, you can click on `+` to create a custom assistant",
     "qa": {
       "q01": "What is LobeHub?",
-      "q02": "What is LobeChat?",
-      "q03": "Does LobeChat have community support?",
-      "q04": "What functions does LobeChat support?",
-      "q05": "How to deploy and use LobeChat?",
-      "q06": "What is the pricing of LobeChat?",
-      "q07": "Is LobeChat free?",
+      "q02": "What is Deblo?",
+      "q03": "Does Deblo have community support?",
+      "q04": "What functions does Deblo support?",
+      "q05": "How to deploy and use Deblo?",
+      "q06": "What is the pricing of Deblo?",
+      "q07": "Is Deblo free?",
       "q08": "Is there a cloud service version?",
-      "q09": "Does LobeChat support local language models?",
-      "q10": "Does LobeChat support image recognition and generation?",
-      "q11": "Does LobeChat support speech synthesis and speech recognition?",
-      "q12": "Does LobeChat support a plugin system?",
+      "q09": "Does Deblo support local language models?",
+      "q10": "Does Deblo support image recognition and generation?",
+      "q11": "Does Deblo support speech synthesis and speech recognition?",
+      "q12": "Does Deblo support a plugin system?",
       "q13": "Is there a marketplace to obtain GPTs?",
-      "q14": "Does LobeChat support multiple AI service providers?",
+      "q14": "Does Deblo support multiple AI service providers?",
       "q15": "What should I do if I encounter problems while using it?"
     },
     "questions": {
