--- a/docs/self-hosting/advanced/settings-url-share.mdx
+++ b/docs/self-hosting/advanced/settings-url-share.mdx
@@ -59,21 +59,21 @@ console.log(url);
 
 | Property name | Type                     |
 | ------------- | ------------------------ |
-| anthropic     | OpenAICompatibleKeyVault |
-| azure         | AzureOpenAIKeyVault      |
-| bedrock       | AWSBedrockKeyVault       |
-| google        | OpenAICompatibleKeyVault |
-| groq          | OpenAICompatibleKeyVault |
-| minimax       | OpenAICompatibleKeyVault |
-| mistral       | OpenAICompatibleKeyVault |
-| moonshot      | OpenAICompatibleKeyVault |
-| ollama        | OpenAICompatibleKeyVault |
-| openai        | OpenAICompatibleKeyVault |
-| openrouter    | OpenAICompatibleKeyVault |
-| perplexity    | OpenAICompatibleKeyVault |
-| togetherai    | OpenAICompatibleKeyVault |
-| zeroone       | OpenAICompatibleKeyVault |
-| zhipu         | OpenAICompatibleKeyVault |
+| anthropic     | `OpenAICompatibleKeyVault` |
+| azure         | `AzureOpenAIKeyVault`      |
+| bedrock       | `AWSBedrockKeyVault`       |
+| google        | `OpenAICompatibleKeyVault` |
+| groq          | `OpenAICompatibleKeyVault` |
+| minimax       | `OpenAICompatibleKeyVault` |
+| mistral       | `OpenAICompatibleKeyVault` |
+| moonshot      | `OpenAICompatibleKeyVault` |
+| ollama        | `OpenAICompatibleKeyVault` |
+| openai        | `OpenAICompatibleKeyVault` |
+| openrouter    | `OpenAICompatibleKeyVault` |
+| perplexity    | `OpenAICompatibleKeyVault` |
+| togetherai    | `OpenAICompatibleKeyVault` |
+| zeroone       | `OpenAICompatibleKeyVault` |
+| zhipu         | `OpenAICompatibleKeyVault` |
 
 - Type `OpenAICompatibleKeyVault`
 
@@ -106,21 +106,21 @@ export type UserModelProviderConfig = Record<string, ProviderConfig>;
 
 | Property name | Type           |
 | ------------- | -------------- |
-| anthropic     | ProviderConfig |
-| azure         | ProviderConfig |
-| bedrock       | ProviderConfig |
-| google        | ProviderConfig |
-| groq          | ProviderConfig |
-| minimax       | ProviderConfig |
-| mistral       | ProviderConfig |
-| moonshot      | ProviderConfig |
-| ollama        | ProviderConfig |
-| openai        | ProviderConfig |
-| openrouter    | ProviderConfig |
-| perplexity    | ProviderConfig |
-| togetherai    | ProviderConfig |
-| zeroone       | ProviderConfig |
-| zhipu         | ProviderConfig |
+| anthropic     | `ProviderConfig` |
+| azure         | `ProviderConfig` |
+| bedrock       | `ProviderConfig` |
+| google        | `ProviderConfig` |
+| groq          | `ProviderConfig` |
+| minimax       | `ProviderConfig` |
+| mistral       | `ProviderConfig` |
+| moonshot      | `ProviderConfig` |
+| ollama        | `ProviderConfig` |
+| openai        | `ProviderConfig` |
+| openrouter    | `ProviderConfig` |
+| perplexity    | `ProviderConfig` |
+| togetherai    | `ProviderConfig` |
+| zeroone       | `ProviderConfig` |
+| zhipu         | `ProviderConfig` |
 
 - Type `ProviderConfig`
 
