--- a/docs/self-hosting/advanced/settings-url-share.zh-CN.mdx
+++ b/docs/self-hosting/advanced/settings-url-share.zh-CN.mdx
@@ -52,27 +52,27 @@ console.log(url);
 
 ## 参数格式
 
-### languageModel
+### keyVaults
 
 - 参数及其类型
 
 | 参数名称   | 类型                     |
 | ---------- | ------------------------ |
-| anthropic  | OpenAICompatibleKeyVault |
-| azure      | AzureOpenAIKeyVault      |
-| bedrock    | AWSBedrockKeyVault       |
-| google     | OpenAICompatibleKeyVault |
-| groq       | OpenAICompatibleKeyVault |
-| minimax    | OpenAICompatibleKeyVault |
-| mistral    | OpenAICompatibleKeyVault |
-| moonshot   | OpenAICompatibleKeyVault |
-| ollama     | OpenAICompatibleKeyVault |
-| openai     | OpenAICompatibleKeyVault |
-| openrouter | OpenAICompatibleKeyVault |
-| perplexity | OpenAICompatibleKeyVault |
-| togetherai | OpenAICompatibleKeyVault |
-| zeroone    | OpenAICompatibleKeyVault |
-| zhipu      | OpenAICompatibleKeyVault |
+| anthropic  | `OpenAICompatibleKeyVault` |
+| azure      | `AzureOpenAIKeyVault`      |
+| bedrock    | `AWSBedrockKeyVault`       |
+| google     | `OpenAICompatibleKeyVault` |
+| groq       | `OpenAICompatibleKeyVault` |
+| minimax    | `OpenAICompatibleKeyVault` |
+| mistral    | `OpenAICompatibleKeyVault` |
+| moonshot   | `OpenAICompatibleKeyVault` |
+| ollama     | `OpenAICompatibleKeyVault` |
+| openai     | `OpenAICompatibleKeyVault` |
+| openrouter | `OpenAICompatibleKeyVault` |
+| perplexity | `OpenAICompatibleKeyVault` |
+| togetherai | `OpenAICompatibleKeyVault` |
+| zeroone    | `OpenAICompatibleKeyVault` |
+| zhipu      | `OpenAICompatibleKeyVault` |
 
 - Type `OpenAICompatibleKeyVault`
 
@@ -105,21 +105,21 @@ export type UserModelProviderConfig = Record<string, ProviderConfig>;
 
 | 参数名称   | 类型           |
 | ---------- | -------------- |
-| anthropic  | ProviderConfig |
-| azure      | ProviderConfig |
-| bedrock    | ProviderConfig |
-| google     | ProviderConfig |
-| groq       | ProviderConfig |
-| minimax    | ProviderConfig |
-| mistral    | ProviderConfig |
-| moonshot   | ProviderConfig |
-| ollama     | ProviderConfig |
-| openai     | ProviderConfig |
-| openrouter | ProviderConfig |
-| perplexity | ProviderConfig |
-| togetherai | ProviderConfig |
-| zeroone    | ProviderConfig |
-| zhipu      | ProviderConfig |
+| anthropic  | `ProviderConfig` |
+| azure      | `ProviderConfig` |
+| bedrock    | `ProviderConfig` |
+| google     | `ProviderConfig` |
+| groq       | `ProviderConfig` |
+| minimax    | `ProviderConfig` |
+| mistral    | `ProviderConfig` |
+| moonshot   | `ProviderConfig` |
+| ollama     | `ProviderConfig` |
+| openai     | `ProviderConfig` |
+| openrouter | `ProviderConfig` |
+| perplexity | `ProviderConfig` |
+| togetherai | `ProviderConfig` |
+| zeroone    | `ProviderConfig` |
+| zhipu      | `ProviderConfig` |
 
 - 类型 `ProviderConfig`
 
