📝 docs: update docs

--- a/docs/usage/features/database.zh-CN.mdx
+++ b/docs/usage/features/database.zh-CN.mdx
@@ -1,22 +1,19 @@
 ---
-title: LobeChat 支持本地&云端数据存储
-description: >-
-LobeChat 支持本地 IndexedDB & 云端 Postgres 数据存储，既能实现本地优先同时支持数据云同步。
+title: LobeChat 支持本地 / 云端数据库存储
+description: LobeChat 支持本地 / 云端数据存储，既能实现 Local First，同时支持数据云同步。
 tags:
   - LobeChat
   - IndexedDB
   - Postgres
-  - 本地优先
+  - Local First
   - 数据云同步
   - 数据库
 ---
 
-# 身份验证系统
+# 本地 / 云端数据存储
 
 <Image
-  alt={'数据存储'}
+  alt={'本地 / 云端数据存储'}
   cover
-  src={
-    'https://github.com/lobehub/lobe-chat/assets/17870709/acf39ea2-74b3-46ae-8eb8-54a51f7f1d36'
-  }
+  src={'https://github.com/lobehub/lobe-chat/assets/17870709/acf39ea2-74b3-46ae-8eb8-54a51f7f1d36'}
 />
