--- a/docs/self-hosting/advanced/server-database.zh-CN.mdx
+++ b/docs/self-hosting/advanced/server-database.zh-CN.mdx
@@ -1,6 +1,6 @@
 # 使用服务端数据库部署
 
-LobeChat 默认使用客户端数据库（IndexedDB），同时也支持使用服务端数据库。LobeChat 采用了 Postgres 作为后端存储数据库。【需要一个 Postgres 简介，50字左右】
+LobeChat 默认使用客户端数据库（IndexedDB），同时也支持使用服务端数据库。LobeChat 采用了 Postgres 作为后端存储数据库。PostgreSQL是一种强大的开源关系型数据库管理系统，具备高度扩展性和标准SQL支持。它提供了丰富的数据类型、并发处理、数据完整性、安全性及可编程性，适用于复杂应用和大规模数据管理。
 
 本文将详细介绍如何在 Vercel 中部署服务端数据库版 LobeChat，包括： 1）数据库配置；2）身份验证服务配置；3） S3 存储服务的设置步骤。
 
@@ -169,7 +169,10 @@ CLERK_WEBHOOK_SECRET=whsec_xxxxxxxxxxxxxxxxxxxxxx
 
 LobeChat 在很早以前就支持了多模态 的 AI 会话，其中涉及到图片上传给 AI 的功能。在客户端数据库方案中，图片文件直接以二进制数据存储在浏览器 indexedDB 数据库，但在服务端数据库中这个方案并不可行。我们需要配置 S3 存储服务来存储大量的图片文件，同时 S3 也可以作为文件上传的存储方案。
 
-【S3 的30字简要介绍】。
+<Callout type={'info'}>
+  在本文，S3所指代的是指兼容 S3 存储方案，即支持 Amazon S3 API 的对象存储系统，常见例如 Cloudflare
+  R2 、阿里云 OSS 等均支持 S3 兼容 API。
+</Callout>
 
   <Steps>
 
@@ -315,11 +318,34 @@ NEXT_PUBLIC_S3_DOMAIN=https://s3-dev.your-domain.com
 <Steps>
   ### 重新部署最新的 commit
 
-### 查看
+配置好环境变量后，你需要重新部署最新的 commit，并等待部署完成。
+
+<Image
+  alt={'重新部署最新的 commit'}
+  src={'https://github.com/lobehub/lobe-chat/assets/28616219/b3a78112-adc8-4837-b4e3-48f67058f16e'}
+></Image>
+
+### 检查功能是否正常
+
+如果你点击左上角登录，可以正常显示登录弹窗，那么说明你已经配置成功了，尽情享用吧~
+
+<Image
+  alt={'用户登录弹窗'}
+  src={'https://github.com/lobehub/lobe-chat/assets/28616219/da84edc3-46f7-4e2b-a0cd-dc33a98bf5cb'}
+></Image>
+
+<Image
+  alt={'登录成功状态'}
+  src={'https://github.com/lobehub/lobe-chat/assets/28616219/9cb5150d-6e1e-4c59-9a18-4e418dce1a5d'}
+></Image>
 
 </Steps>
 
-## 服务端数据库所需环境变量
+## 附录
+
+### 服务端数据库环境变量一览
+
+为方便一键复制，在此汇总配置服务端数据所需要的环境变量：
 
 ```shell
 # 指定服务模式为 server
