--- a/docs/usage/features/database.mdx
+++ b/docs/usage/features/database.mdx
@@ -11,13 +11,12 @@ tags:
 ---
 # Local / Cloud Data Storage
 
-```jsx
 <Image
 alt={'Local / Cloud Data Storage'}
 cover
-src={'<https://github.com/lobehub/lobe-chat/assets/17870709/acf39ea2-74b3-46ae-8eb8-54a51f7f1d36'}>
+src={'https://github.com/lobehub/lobe-chat/assets/17870709/acf39ea2-74b3-46ae-8eb8-54a51f7f1d36'}
 />
-```
+
 
 In modern application development, the choice of data storage solution is crucial. To meet the needs of different users, LobeChat offers flexible configurations that support both local and server-side databases. Whether you prioritize data privacy and control or seek a convenient user experience, LobeChat can provide excellent solutions for you.
 
@@ -27,9 +26,8 @@ For users who prefer more control over their data and value privacy protection, 
 
 Additionally, we have introduced Conflict-Free Replicated Data Type (CRDT) technology to ensure a seamless multi-device synchronization experience. This experimental feature aims to provide users with greater autonomy and data security.
 
-```jsx
+
 <Callout type={'info'}>LobeChat defaults to the local database solution to reduce the onboarding cost for new users.</Callout>
-```
 
 Furthermore, we have attempted to introduce CRDT technology to achieve cross-device synchronization based on the local database. This experimental feature aims to provide users with greater autonomy and data security.
 
@@ -52,7 +50,7 @@ The local database solution is suitable for users who wish to have strict contro
 
 ### 2. Server-Side Database
 
-The server-side database solution is ideal for users who want to simplify data management processes and enjoy a convenient user experience. Through server-side databases and user authentication, LobeChat can ensure the security and efficiency of data. If you want to learn how to configure a server-side database, please refer to our [detailed documentation](/en-US/docs/self-hosting/advanced/server-database).
+The server-side database solution is ideal for users who want to simplify data management processes and enjoy a convenient user experience. Through server-side databases and user authentication, LobeChat can ensure the security and efficiency of data. If you want to learn how to configure a server-side database, please refer to our [detailed documentation](/docs/self-hosting/advanced/server-database).
 
 Whether you choose a local database or a server-side database, LobeChat can provide you with an excellent user experience.
 
