📝 docs: update env

--- a/docs/self-hosting/advanced/server-database.zh-CN.mdx
+++ b/docs/self-hosting/advanced/server-database.zh-CN.mdx
@@ -210,7 +210,7 @@ S3_BUCKET=lobechat
 # 存储桶的请求端点
 S3_ENDPOINT=https://0b33a03b5c993fd2f453379dc36558e5.r2.cloudflarestorage.com
 # 存储桶对外的访问域名
-NEXT_PUBLIC_S3_DOMAIN=https://s3-dev.your-domain.com
+NEXT_PUBLIC_S3_DOMAIN=https://s3-for-lobechat.your-domain.com
 ```
 
     ### 获取 S3 密钥环境变量
@@ -370,7 +370,7 @@ S3_BUCKET=lobechat
 # 存储桶的请求端点
 S3_ENDPOINT=https://0b33a03b5c993fd2f453379dc36558e5.r2.cloudflarestorage.com
 # 存储桶对外的访问域名
-NEXT_PUBLIC_S3_DOMAIN=https://s3-dev.your-domain.com
+NEXT_PUBLIC_S3_DOMAIN=https://s3-for-lobechat.your-domain.com
 # 桶的区域，如 us-west-1，一般来说不需要添加，但某些服务商则需要配置
 # S3_REGION=us-west-1
 ```
