--- a/docs/usage/features/auth.mdx
+++ b/docs/usage/features/auth.mdx
@@ -1,6 +1,5 @@
 # Support Multi-User Management
 
-
 <Image
 alt={'Identity Verification System'}
 cover
@@ -18,12 +17,13 @@ LobeChat integrates `next-auth`, a flexible and powerful identity verification l
 - **Social Login**: Support quick login via various social platforms.
 - **Data Security**: Ensure the security and privacy of user data.
 
-
 <Callout type={'warning'}>
-Due to workload constraints, integration of next-auth with a server-side database has not been implemented yet. If you need to use a server-side database, please use Clerk. </Callout>
+Due to workload constraints, integration of next-auth with a server-side database has not been implemented yet. If you need to use a server-side database, please use Clerk.
+</Callout>
 
 <Callout type={'info'}>
-For information on using Next-Auth, you can refer to [Authentication Services - Next Auth](/en-US/docs/self-hosting/advanced/authentication#next-auth). </Callout>
+For information on using Next-Auth, you can refer to [Authentication Services - Next Auth](/en-US/docs/self-hosting/advanced/authentication#next-auth).
+</Callout>
 
 ## Clerk: Modern User Management Platform
 
@@ -35,10 +35,10 @@ For users requiring advanced user management features, LobeChat also supports [C
 - **Scalability**: Supports complex user management requirements.
 
 <Callout type={'info'}>
-For information on using Clerk, you can refer to [Authentication Services - Clerk](/en-US/docs/self-hosting/advanced/authentication#clerk). </Callout>
-
+For information on using Clerk, you can refer to [Authentication Services - Clerk](/en-US/docs/self-hosting/advanced/authentication#clerk).
+</Callout>
 
 <Callout type={'tip'}>
-If you need to use Clerk in conjunction with a server-side database, you can refer to the "Configuring Authentication Services" section in [Deploying with a Server-Side Database](/en-US/docs/self-hosting/advanced/server-database). </Callout>
-
+If you need to use Clerk in conjunction with a server-side database, you can refer to the "Configuring Authentication Services" section in [Deploying with a Server-Side Database](/en-US/docs/self-hosting/advanced/server-database).
+</Callout>
 
